Salesforce CPQ/main/default/objects/OpportunityLineItem/fields/ParentID__c.field-meta.xml
<CustomField>
    <fullName>ParentID__c</fullName>
    <inlineHelpText>ID of the opportunity product that came from this product&apos;s bundle.</inlineHelpText>
    <label>Parent ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>