Salesforce CPQ/main/default/objects/OpportunityLineItem/fields/SubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionType__c</fullName>
    <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
    <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SubscriptionType</valueSetName>
    </valueSet>
</CustomField>